@@ -6,9 +6,9 @@ package = Search
 
 files[] = search_api_autocomplete.entity.php
 
-; Information added by Drupal.org packaging script on 2015-03-03
-version = "7.x-1.1+8-dev"
+; Information added by Drupal.org packaging script on 2015-03-04
+version = "7.x-1.1+9-dev"
 core = "7.x"
 project = "search_api_autocomplete"
-datestamp = "1425403689"
+datestamp = "1425461582"
 
