@@ -29,6 +29,7 @@ function search_api_autocomplete_form_views_exposed_form_alter(array &$form, arr
   $fields = $index->getFulltextFields(TRUE);
   // Add the "Search: Fulltext search" filter as another text field.
   $fields[] = 'search_api_views_fulltext';
+  drupal_alter('search_api_autocomplete_views_fulltext_fields', $fields, $search, $view);
   // We need the _entity_views_field_identifier() function to translate Search
   // API field names into Views identifiers.
   module_load_include('views.inc', 'entity', 'views/entity');
